AgTenplate/force-app/main/default/objects/Account/Account.object-meta.xml
<CustomObject>

    <sharingModel>ReadWrite</sharingModel>
</CustomObject>