AgTenplate/force-app/main/default/objects/Account/fields/Agriculture_Type__c.field-meta.xml
<CustomField>
    <fullName>Agriculture_Type__c</fullName>
    <description>Specific type of agriculture business</description>
    <label>Agriculture Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seed Distributor</fullName>
            </value>
            <value>
                <fullName>Fertilizer Supplier</fullName>
            </value>
            <value>
                <fullName>Equipment Dealer</fullName>
            </value>
            <value>
                <fullName>Crop Protection</fullName>
            </value>
            <value>
                <fullName>Irrigation Systems</fullName>
            </value>
            <value>
                <fullName>Grain Handler</fullName>
            </value>
            <value>
                <fullName>Feed Supplier</fullName>
            </value>
            <value>
                <fullName>Chemical Distributor</fullName>
            </value>
            <value>
                <fullName>Machinery Parts</fullName>
            </value>
            <value>
                <fullName>Organic Products</fullName>
            </value>
            <value>
                <fullName>Precision Agriculture</fullName>
            </value>
            <value>
                <fullName>Livestock Equipment</fullName>
            </value>
            <value>
                <fullName>Dairy Farm</fullName>
            </value>
            <value>
                <fullName>Cattle Ranch</fullName>
            </value>
            <value>
                <fullName>Corn Farm</fullName>
            </value>
            <value>
                <fullName>Soybean Farm</fullName>
            </value>
            <value>
                <fullName>Wheat Farm</fullName>
            </value>
            <value>
                <fullName>Cotton Farm</fullName>
            </value>
            <value>
                <fullName>Rice Farm</fullName>
            </value>
            <value>
                <fullName>Vegetable Farm</fullName>
            </value>
            <value>
                <fullName>Fruit Orchard</fullName>
            </value>
            <value>
                <fullName>Vineyard</fullName>
            </value>
            <value>
                <fullName>Poultry Farm</fullName>
            </value>
            <value>
                <fullName>Hog Farm</fullName>
            </value>
            <value>
                <fullName>Mixed Crop Farm</fullName>
            </value>
            <value>
                <fullName>Organic Farm</fullName>
            </value>
            <value>
                <fullName>Grain Farm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField> 