AgTenplate/force-app/main/default/objects/Account/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <description>Farming certification type</description>
    <label>Certification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Organic</fullName>
            </value>
            <value>
                <fullName>Conventional</fullName>
            </value>
            <value>
                <fullName>GAP Certified</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField> 