AgTenplate/force-app/main/default/objects/Account/fields/Farm_Size_Acres__c.field-meta.xml
<CustomField>
    <fullName>Farm_Size_Acres__c</fullName>
    <description>Size of the farm in acres</description>
    <label>Farm Size (Acres)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>