AgTenplate/force-app/main/default/objects/Account/fields/Farming_Region__c.field-meta.xml
<CustomField>
    <fullName>Farming_Region__c</fullName>
    <description>Specific farming region within the state</description>
    <label>Farming Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 