AgTenplate/force-app/main/default/objects/Account/fields/Primary_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Primary_Equipment__c</fullName>
    <description>Primary equipment used on the farm</description>
    <label>Primary Equipment</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 