AgTenplate/force-app/main/default/objects/Account/fields/Soil_Type__c.field-meta.xml
<CustomField>
    <fullName>Soil_Type__c</fullName>
    <description>Primary soil type on the farm</description>
    <label>Soil Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loam</fullName>
            </value>
            <value>
                <fullName>Clay</fullName>
            </value>
            <value>
                <fullName>Sandy</fullName>
            </value>
            <value>
                <fullName>Silt</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField> 