AgTenplate/force-app/main/default/objects/Account/fields/Water_Source__c.field-meta.xml
<CustomField>
    <fullName>Water_Source__c</fullName>
    <description>Primary water source for the farm</description>
    <label>Water Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Well</fullName>
            </value>
            <value>
                <fullName>Irrigation District</fullName>
            </value>
            <value>
                <fullName>River</fullName>
            </value>
            <value>
                <fullName>Lake</fullName>
            </value>
            <value>
                <fullName>Municipal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField> 