AgTenplate/force-app/main/default/objects/Account/recordTypes/Compititor.recordType-meta.xml
<RecordType>
    <fullName>Compititor</fullName>
    <active>true</active>
    <label>Compititor</label>
</RecordType>