AgTenplate/force-app/main/default/objects/Account/recordTypes/Distributor.recordType-meta.xml
<RecordType>
    <fullName>Distributor</fullName>
    <active>true</active>
    <businessProcess>Account</businessProcess>
    <description>Record type for agriculture distributors, suppliers, and equipment dealers</description>
    <label>Distributor</label>
</RecordType> 