AgTenplate/force-app/main/default/objects/Account/recordTypes/Distributor_Retailer.recordType-meta.xml
<RecordType>
    <fullName>Distributor_Retailer</fullName>
    <active>true</active>
    <label>Distributor Or Retailer</label>
</RecordType>