AgTenplate/force-app/main/default/objects/Account/recordTypes/Farm.recordType-meta.xml
<RecordType>
    <fullName>Farm</fullName>
    <active>true</active>
    <businessProcess>Account</businessProcess>
    <description>Record type for agriculture farms, ranches, and agricultural operations</description>
    <label>Farm</label>
</RecordType>